--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2807,3 +2807,63 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 #chat table.channel-list .topic {
 	white-space: pre-wrap;
 }
+
+/* Jump to feature WIP styles */
+#jump-to-container {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background: var(--overlay-bg-color);
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: flex-start;
+	padding: 3em;
+}
+
+#jump-to-container .jump-to-dialog {
+	background: var(--body-bg-color);
+	padding: 1em;
+	border-radius: 5px;
+	max-height: 100%;
+	flex-grow: 0;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+}
+
+#jump-to-container .jump-to-dialog .input {
+	width: auto;
+}
+
+#jump-to-container .jump-to-dialog .results {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	overflow: auto;
+}
+
+#jump-to-container .jump-to-dialog .results .chan {
+	display: flex;
+	justify-content: space-between;
+	cursor: pointer;
+	padding: 0.5em 1em;
+}
+
+#jump-to-container .jump-to-dialog .results .chan .close-tooltip {
+	display: none;
+}
+
+#jump-to-container .jump-to-dialog .results .active-result {
+	background: rgba(0, 0, 0, 0.3); /* TODO: better color */
+}
+
+#jump-to-container .channel-list-item[data-type="lobby"] {
+	padding: 8px 14px;
+}
+
+#jump-to-container .channel-list-item[data-type="lobby"]::before {
+	content: "\f233";
+}
